# windows-native-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  server.py
tests/: diag_bfs_depth.py  diag_cached_vs_bfs.py  diag_snapshot_dump.py  test_e2e.py  test_server.py
windows_native_mcp/: main.py
windows_native_mcp/core/: cached_walk.py  input.py  screen.py  state.py  uia.py
windows_native_mcp/tools/: app.py  click.py  scroll.py  shortcut.py  snapshot.py  type_text.py
