[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "windows-native-mcp"
version = "0.1.0"
description = "MCP server for Windows 11+ desktop automation"
requires-python = ">=3.12"
dependencies = [
	"fastmcp>=3.0.2",
	"pydantic>=2.0",
	"uiautomation>=2.0.18",
	"mss>=9.0.0",
	"Pillow>=10.0.0",
]

[tool.hatch.build.targets.wheel]
only-include = ["windows_native_mcp"]
sources = ["."]

[project.scripts]
windows_native_mcp = "windows_native_mcp.main:run_server"
